<resources>
    <string name="app_name">SensePlanner</string>

    <!-- Main menu items -->
    <string name="action_edit_categories">Edit categories</string>
    <string name="action_sign_out">Sign out</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <string name="facebook_application_id" translatable="false">227710321193986</string>
    <string name="facebook_login_protocol_scheme" translatable="false">f892f5c073196988b8108d60d65c863b</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">u4Mput5tsnvdPeeKZtR9I6fbv</string>
    <string name="twitter_consumer_secret" translatable="false">HS4kMuXxDwTUcP8lgOwehopHv1r5NkQP28ZSVxhthcBTIzV1mO</string>

    <!-- TODO: Remove or change this placeholder text -->


    <!-- Activity menu items -->
    <string name="menu_edit_activity">Edit event</string>
    <string name="menu_delete_activity">Delete event</string>

    <string name="description_format">%1$s(%2$s - %3$s) %4$s</string>
    <string name="date_format">%1$s-%2$s-%3$s</string>
    <string name="time_format">%1$d:%2$02d</string>

    <!--Chart names-->
    <string name="best_appealing_chart">Your appealing/mood chart</string>
    <string name="hour_chart">10 days by hour chart</string>
    <string name="dayily_chart">Activities daily chart</string>

    <string name="all_types">All</string>
    <string name="appwidget_text">EXAMPLE</string>

    <string name="category_label">Category</string>
    <string name="appealing_label">Appealing</string>
    <string name="mood_label">Mood</string>

    <string name="save_button">Save</string>

    <string name="connection_on">Connection with your data established</string>
    <string name="connection_off">Connection with your data disabled</string>

    <string name="ref_users">users</string>
    <string name="ref_defaultactivities">defaultactivities</string>
    <string name="ref_defaultappealing">defaultappealing</string>
    <string name="ref_defaultmood">defaultmood</string>
    <string name="ref_planner">planner</string>
    <string name="ref_activities">activities</string>
    <string name="ref_appealing">appealing</string>
    <string name="ref_mood">mood</string>
    <string name="ref_daystatistics">daystatistics</string>

    <string name="job_addiction">jobAddiction</string>
    <string name="mood_type">moodType</string>
    <string name="activity_records">activity_records</string>

    <string name="activity">activity</string>

    <string name="bound1">1.00</string>
    <string name="bound2">1.66</string>
    <string name="bound3">2.34</string>
    <string name="bound4">3.00</string>
    <string name="bound5">3.0001</string>

    <string name="lb_low">Low</string>
    <string name="lb_bad">Bad</string>
    <string name="lb_average">Average</string>
    <string name="lb_high">High</string>
    <string name="lb_good">Good</string>

    <string name="menu_record_desc">Options menu</string>
    <string name="widget_image">Chart image</string>
    <string name="appealing_str">By appealing</string>
    <string name="mood_str">By mood</string>
    <string name="start_date_hint">Start date</string>
    <string name="start_time_hint">Start time</string>
    <string name="notify_lbl">Notify</string>
    <string name="start_date_hint_hour">Starting date</string>
    <string name="start_date_hint_daily">Show for</string>

    <string name="finish_date_hint">Finish date</string>
    <string name="finish_time_hint">Finish time</string>
    <string name="cat_name_hint">Category name</string>
    <string name="job_label">Job</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="event_name">Event name</string>
    <string name="event_desc">Event description</string>
    <string name="hint_1_label">Tap category to begin or add new in the app settings!</string>

    <string name="widget_label">Please, select date that daily chart will show your mood for!</string>
    <string name="widget_date">Enter date</string>
    <string name="widget_button">Get widget</string>

    <string name="cat_label_prefix">Cat:</string>

    <string name="desc_add_category">Add category button</string>
    <string name="desc_show_add_buttons">Show add event buttons</string>
    <string name="desc_today_event">Add event for today</string>
    <string name="desc_yesterday_event">Add event for yesterday</string>
    <string name="desc_tomorrow_event">Add event for tomorrow</string>

    <string name="activities_label">Avg score for events:</string>
    <string name="empty_chart_text">No records for this day</string>

    <string name="category_label_tooltip">Category to view</string>
    <string name="hour_chart_y_label">Hours</string>

    <string name="chart_events_label">Show events by</string>

    <string name="chart_appealing_short">Appealing</string>
    <string name="chart_mood_short">Mood</string>

    <string name="edit_cat_label">Editing category</string>

    <string name="onboard_swipe">Swipe to delete activity</string>
    <string name="onboard_touch">Touch to add new category</string>
    <string name="onboard_ok">GOT IT!</string>

    <string name="empty_data">Looks like there is no records, let\'s dive into this process.</string>
    <string name="empty_list">Guess there is no data to show for this conditions</string>


</resources>
