<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCategoryActivity">

  <FrameLayout
      android:id="@+id/frameEditCategory"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />

  <android.support.constraint.ConstraintLayout
      android:id="@+id/onboardingLayout"
      android:background="#9590C5D6"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <ImageView
          android:id="@+id/imageView2"
          android:layout_width="120dp"
          android:layout_height="144dp"
          android:layout_marginStart="48dp"
          android:layout_marginLeft="48dp"
          android:layout_marginTop="80dp"
          android:src="@drawable/left_right_finger_512"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="144dp"
        android:layout_height="121dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/onboard_swipe"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

      <Button
          android:id="@+id/buttonGotIt"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="4dp"
          android:layout_marginLeft="4dp"
          android:layout_marginBottom="8dp"
          android:text="@string/onboard_ok"
          app:layout_constraintBottom_toTopOf="@+id/textView11"
          app:layout_constraintStart_toStartOf="@+id/imageView3"
          app:layout_constraintTop_toBottomOf="@+id/imageView2" />

      <ImageView
          android:id="@+id/imageView3"
          android:layout_width="103dp"
          android:layout_height="86dp"
          android:layout_marginEnd="24dp"
          android:layout_marginRight="24dp"
          android:layout_marginBottom="28dp"
          android:src="@drawable/icon_touch_512"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent" />

      <TextView
          android:id="@+id/textView11"
          android:layout_width="222dp"
          android:layout_height="56dp"
          android:layout_marginEnd="8dp"
          android:layout_marginRight="8dp"
          android:layout_marginBottom="8dp"
          android:text="@string/onboard_touch"
          android:textSize="20sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toTopOf="@+id/imageView3"
          app:layout_constraintEnd_toEndOf="@+id/imageView3" />


  </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>